--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,20 +1,5 @@
-<style>
-    .divider:after,
-    .divider:before {
-    content: "";
-    flex: 1;
-    height: 1px;
-    background: #eee;
-    }
-    .h-custom {
-    height: calc(100% - 73px);
-    }
-    @media (max-width: 450px) {
-    .h-custom {
-    height: 100%;
-    }
-    }
-</style>
+<link rel="stylesheet" href="/css/user_sign_up.css">
+
 <body >
     <!-- <h1>Sign in page</h1>
     <form action="/users/create-session" method="POST">
