--- a/views/chat_box.ejs
+++ b/views/chat_box.ejs
@@ -1,176 +1,5 @@
-<!-- chat box 
-<section style="background-color: #eee;">
-    <div class="container py-5">
-  
-      <div class="row d-flex justify-content-center">
-        <div class="col-md-8 col-lg-6 col-xl-4">
-  
-          <div class="card" id="chat1" style="border-radius: 15px;">
-            <div
-              class="card-header d-flex justify-content-between align-items-center p-3 bg-info text-white border-bottom-0"
-              style="border-top-left-radius: 15px; border-top-right-radius: 15px;">
-              <i class="fas fa-angle-left"></i>
-              <p class="mb-0 fw-bold">Live chat</p>
-              <i class="fas fa-times"></i>
-            </div>
 
-
-            
-            <div class="card-body" style="height: 500px; overflow: auto;">
-  
-              <div class="d-flex flex-row justify-content-start mb-4">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
-                  alt="avatar 1" style="width: 45px; height: 100%;">
-                <div class="p-3 ms-3" style="border-radius: 15px; background-color: rgba(57, 192, 237,.2);">
-                  <p class="small mb-0">Hello and thank you for visiting MDBootstrap. Please click the video
-                    below.</p>
-                </div>
-              </div>
-  
-              <div class="d-flex flex-row justify-content-end mb-4">
-                <div class="p-3 me-3 border" style="border-radius: 15px; background-color: #fbfbfb;">
-                  <p class="small mb-0">Thank you, I really like your product.</p>
-                </div>
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2-bg.webp"
-                  alt="avatar 1" style="width: 45px; height: 100%;">
-              </div>
-  
-              <div class="d-flex flex-row justify-content-start mb-4">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
-                  alt="avatar 1" style="width: 45px; height: 100%;">
-                <div class="ms-3" style="border-radius: 15px;">
-                  <div class="bg-image">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/screenshot1.webp"
-                      style="border-radius: 15px;" alt="video">
-                    <a href="#!">
-                      <div class="mask"></div>
-                    </a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="d-flex flex-row justify-content-start mb-4">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
-                  alt="avatar 1" style="width: 45px; height: 100%;">
-                <div class="ms-3" style="border-radius: 15px;">
-                  <div class="bg-image">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/screenshot1.webp"
-                      style="border-radius: 15px;" alt="video">
-                    <a href="#!">
-                      <div class="mask"></div>
-                    </a>
-                  </div>
-                </div>
-              </div>
-
-
-              <div class="d-flex flex-row justify-content-start mb-4">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
-                  alt="avatar 1" style="width: 45px; height: 100%;">
-                <div class="ms-3" style="border-radius: 15px;">
-                  <div class="bg-image">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/screenshot1.webp"
-                      style="border-radius: 15px;" alt="video">
-                    <a href="#!">
-                      <div class="mask"></div>
-                    </a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="d-flex flex-row justify-content-start mb-4">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
-                  alt="avatar 1" style="width: 45px; height: 100%;">
-                <div class="ms-3" style="border-radius: 15px;">
-                  <div class="bg-image">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/screenshot1.webp"
-                      style="border-radius: 15px;" alt="video">
-                    <a href="#!">
-                      <div class="mask"></div>
-                    </a>
-                  </div>
-                </div>
-              </div>
-  
-              <div class="d-flex flex-row justify-content-start mb-4">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
-                  alt="avatar 1" style="width: 45px; height: 100%;">
-                <div class="p-3 ms-3" style="border-radius: 15px; background-color: rgba(57, 192, 237,.2);">
-                  <p class="small mb-0">...</p>
-                </div>
-              </div>
-            </div>
-
-              <div class="form-outline">
-                <form>
-                <textarea class="form-control" id="textAreaExample" rows="4"></textarea>
-                <label class="form-label" for="textAreaExample">Type your message</label>
-                    <button  type="submit" value="Post" class="btn btn-primary" style="margin-left: 100px; margin-top: 10px;">send</button>
-                </form> 
-              </div>
-  
-            
-          </div>
-  
-        </div>
-      </div>
-  
-    </div>
-  </section> -->
-
-<style>
-
-  #chat-windows{
-      position: fixed;
-      /* top: 400px; */
-      bottom: 300px;
-  }
-    #user-chat-box {
-  /* position: fixed; */
- 
-  border: 1px dashed grey;
-  height: 350px;
-  width: 300px;
-  background: white;
-  padding: 5px;
-  box-shadow: 1px 1px 1px 1px lightgrey; }
-  #user-chat-box #chat-messages-list {
-    list-style: none;
-    padding: 10px;
-    height: 70%;
-    background-color: white;
-    overflow: auto; }
-    #user-chat-box #chat-messages-list .other-message {
-      text-align: left;
-      padding: 5px; }
-      #user-chat-box #chat-messages-list .other-message span {
-        display: inline-block;
-        padding: 15px;
-        background-color: #ffa0a0; }
-    #user-chat-box #chat-messages-list .self-message {
-      text-align: right;
-      padding: 5px; }
-      #user-chat-box #chat-messages-list .self-message span {
-        display: inline-block;
-        padding: 15px;
-        background-color: #a0dcff; }
-  #user-chat-box #chat-message-input-container {
-    height: 24%;
-    width: 100%;
-    display: flex;
-    flex-direction: row; }
-    #user-chat-box #chat-message-input-container #chat-message-input {
-      height: 50%;
-      width: 70%; }
-    #user-chat-box #chat-message-input-container #send-message {
-      height: 50%;
-      width: 30%;
-      font-size: 25px;
-      color: white;
-      border: none;
-      background: #58d258; }
-
-</style>
+<link rel="stylesheet" href="/css/chat-box.css">
   <!-- CHANGE :: Creat the code for chat box -->
 
   <% if (locals.user){ %>
@@ -197,73 +26,13 @@
         </div>
         </div>
    
-    </div>
+    </div> -->
 
-    <div id="2" style="border: 4px solid; height: 100px;">
-    
-      <div id="user-chat-box">
-        <ul id="chat-messages-list">
-          <li class="other-message">
-            <span>Other Message</span>
-          </li>
-          <li class="self-message">
-            <span>
-              Self Message
-            </span>
-            
-          </li>
-    
-        </ul>
-        <div id="chat-message-input-container">
-          <input id="chat-message-input" placeholder="Type message here">
-          <button id="send-message">Send</button>
-        </div>
-      </div>
    
-    </div>
-    <div id="3" style="border: 4px solid; height: 100px;">
-      <div id="user-chat-box">
-        <ul id="chat-messages-list">
-          <li class="other-message">
-            <span>Other Message</span>
-          </li>
-          <li class="self-message">
-            <span>
-              Self Message
-            </span>
-            
-          </li>
-    
-        </ul>
-        <div id="chat-message-input-container">
-          <input id="chat-message-input" placeholder="Type message here">
-          <button id="send-message">Send</button>
-        </div>
-    
-      </div>
-    </div> 
-  
-	 -->
 	
 
   </div>
   <% } %>
 
 
-<!-- <div id="user-chat-box" style="right: 20px;">
-  <ul id="chat-messages-list">
-    <li class="other-message">
-      <span>Other Message</span>
-    </li>
-    <li class="self-message">
-      <span>
-        Self Message
-      </span>
-      
-    </li>
 
-  </ul>
-  <div id="chat-message-input-container">
-    <input id="chat-message-input" placeholder="Type message here">
-    <button id="send-message">Send</button>
-  </div> -->
