--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,25 +1,10 @@
 <!-- body for layout.ejs 
 
  will be linked using set static layouts in layouts page  -->
-<!-- <link rel="stylesheet" href="/css/user_profile.css"> -->
+<link rel="stylesheet" href="/css/user_profile.css">
 
 
-<style>
-    .gradient-custom-2 {
-/* fallback for old browsers */
-background: #fbc2eb;
 
-/* Chrome 10-25, Safari 5.1-6 */
-background: -webkit-linear-gradient(to right, rgba(251, 194, 235, 1), rgba(166, 193, 238, 1));
-
-/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-background: linear-gradient(to right, rgba(251, 194, 235, 1), rgba(166, 193, 238, 1))
-}
-
-#update-form{
-   display: none;
-}
-</style>
 <div class="h-100 gradient-custom-2">
 <section class="h-100 gradient-custom-2">
     <div class="container py-5 h-100">
