--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,40 +1,9 @@
-<body>
-    <h1>Sign up page</h1>
-
-    <form action="/users/create" method="POST">
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="email" placeholder="Your email" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <input type="password" name="confirm_password" placeholder="Confirm your Password" required>
-
-        <input type="submit" value="Sign up">
-
-    </form>
-
-    <p>
-        <a href="/users/auth/google">google Signin / Sign up</a>
-    </p>
-</body>
+<link rel="stylesheet" href="/css/user_sign_up.css">
 
 
 
-<style>
-    .divider:after,
-    .divider:before {
-    content: "";
-    flex: 1;
-    height: 1px;
-    background: #eee;
-    }
-    .h-custom {
-    height: calc(100% - 73px);
-    }
-    @media (max-width: 450px) {
-    .h-custom {
-    height: 100%;
-    }
-    }
-</style>
+
+
 <body >
     <!-- <h1>Sign in page</h1>
     <form action="/users/create-session" method="POST">
