complete deployment setup

--- a/views/chat_box.ejs
+++ b/views/chat_box.ejs
@@ -1,5 +1,5 @@
 
-<link rel="stylesheet" href="/css/chat-box.css">
+<link rel="stylesheet" href="  <%= assetPath('css/chat-box.css')%>">
   <!-- CHANGE :: Creat the code for chat box -->
 
   <% if (locals.user){ %>
