--- a/views/_posts.ejs
+++ b/views/_posts.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="../assets/css/post.css">
+<link rel="stylesheet" href="<%= assetPath('css/post.css')%>">
 
 <style>
      @media only screen and (max-width: 600px) {
