--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,7 +1,7 @@
 <!-- body for layout.ejs 
 
  will be linked using set static layouts in layouts page  -->
-<link rel="stylesheet" href="/css/user_profile.css">
+<link rel="stylesheet" href="<%= assetPath('css/user_profile.css')%>">
 
 
 
